package com.directi.training.isp.exercise_refactored;

public interface IProximity {
    public void proximityCallback();
}
