package com.directi.training.isp.exercise_refactored;

public interface ITimeout {
    public void timeOutCallback();
}